--- a/class2/03/03.css
+++ b/class2/03/03.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'NanumBarunGothicYetHangul';
+}
 button{
     width: 100px;
     height: 40px;
@@ -8,7 +11,16 @@ button{
     padding: 10px;
     border-radius: 15px;
 }
-button:hover{
+
+
+#bt3{
+    background-color: palevioletred;
+}
+#bt4{
+    background-color: yellowgreen;
+}
+
+button:hover, #btArea2 > button:hover{
     background-color: brown;
     color: white;
     cursor: pointer;
@@ -16,4 +28,8 @@ button:hover{
 h2{
     font-size: medium;
     color: blue;
+}
+
+.btGroup{
+    background-color: whitesmoke;
 }
