--- a/class2/02/02.css
+++ b/class2/02/02.css
@@ -1,9 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: "Do Hyeon", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    font-family: 'NanumBarunGothicYetHangul';
     
     
 }
