--- a/class2/index.css
+++ b/class2/index.css
@@ -1,11 +1,17 @@
 *{
     padding: 0px;
     margin: 0px;
+    font-family: 'NanumBarunGothicYetHangul';
+    /* border: solid black; */
 }
+
 
 main{
     width: 60%;
     margin-left: 20%;
+
+    text-align: center;
+
 }
 
 header{
@@ -16,7 +22,9 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 0px 20px;
+
 }
+
 
 article{
     display: flex;
@@ -71,3 +79,19 @@ section>div{
     padding: 20px;
     margin: 10px;
 }
+
+/* header > div > a{
+    text-decoration: none;
+    display: 10px;
+    padding: 10px;
+    color: midnightblue;
+    background-color: white;
+    width: 100px;
+
+    display: inline-flex;
+    justify-content: center;
+    border-radius: 5px;
+    width: 6px;
+    height: 20px;
+    
+} */
